# marketplace-pricing-analysis

./: .gitignore  README.md  pyproject.toml
docs/: data_dictionary.md  project_definition.md
reports/: baseline_results.md  eda_report.md  model_card.md  uncertainty_report.md
reports/tableau/: marketplace_opportunity_dashboard.twbx
reports/tables/: baseline_metrics.csv  baseline_price_band_metrics.csv  catboost_calibration_results.csv  catboost_feature_importance.csv  conditional_coverage_metrics.csv  conformal_interval_metrics.csv  daily_listing_summary.csv  final_model_metrics.csv  final_model_price_band_metrics.csv  manufacturer_summary.csv  market_kpis.csv  mileage_summary.csv  state_summary.csv  vehicle_age_summary.csv  vehicle_type_summary.csv
src/analysis/: market_overview.py  opportunity_tableau_export.py  tableau_export.py  visualizations.py
src/data/: cleaning.py  ingestion.py  splitting.py  validation.py
src/features/: build_features.py
src/models/: baselines.py  baselines.py.save  catboost_model.py  evaluate.py  final_evaluation.py  ridge.py  train.py
src/uncertainty/: analyze_uncertainty.py  conformal.py  run_conformal.py
tests/: test_baselines.py  test_catboost_model.py  test_conformal.py  test_data.py  test_evaluate.py  test_features.py  test_market_overview.py  test_opportunity_tableau_export.py  test_project_structure.py  test_ridge.py  test_splitting.py  test_tableau_export.py  test_uncertainty_analysis.py
