[project]
name = "marketplace-pricing-analysis"
version = "0.1.0"
description = "Uncertainty-aware used-vehicle marketplace pricing analysis"
requires-python = ">=3.12,<3.14"
dependencies = [
    "catboost>=1.2.8",
    "duckdb>=1.3.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "numpy>=2.2.0",
    "pandas>=2.2.0",
    "pyarrow>=20.0.0",
    "scikit-learn>=1.6.0",
]

[dependency-groups]
dev = [
    "kaggle>=2.2.3",
    "pytest>=8.3.0",
    "ruff>=0.12.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
